--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -2,3 +2,4 @@
 
 # Application configuration
 http.port=9090
+startingDate=#[groovy: new Date(System.currentTimeMillis() - 10000).format("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", TimeZone.getTimeZone('UTC'))]
