--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,25 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mule.kicks</groupId>
+	<groupId>org.mule.templates</groupId>
 	<artifactId>sfdc2sfdc-users-migration</artifactId>
 	<packaging>mule</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>sfdc2sfdc-users-migration Mule Kick Project</name>
+	<name>sfdc2sfdc-user-migration Anypoint Template Project</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<mule.version>3.5.0-cascade</mule.version>
+		<mule.version>3.5.0-M4</mule.version>
+		<munit.version>3.5-M1</munit.version>
+
 		<sfdc.version>5.4.3</sfdc.version>
+		<junit.version>4.9</junit.version>
 
 		<eclipsePluginVersion>2.8</eclipsePluginVersion>
 		<jdkName>JavaSE-1.6</jdkName>
 		<jdk.version>1.6</jdk.version>
-		<junit.version>4.9</junit.version>
-		<munit.version>3.4-M4-SNAPSHOT</munit.version>
 	</properties>
 
 	<build>
