--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Fri Jan 10 14:23:54 GMT-03:00 2014
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,inboundEndpoints.xml
+#Tue Mar 18 18:00:39 GMT-03:00 2014
+config.resources=businessLogic.xml,config.xml,errorHandling.xml,endpoints.xml,test-flows.xml
