--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
 #Fri Mar 28 18:42:38 GMT-03:00 2014
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,inboundEndpoints.xml
+config.resources=businessLogic.xml,config.xml,errorHandling.xml,endpoints.xml
