--- a/pom.xml
+++ b/pom.xml
@@ -446,6 +446,12 @@
 
 		<!-- for testing -->
 		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>mockobjects</groupId>
 			<artifactId>mockobjects-core</artifactId>
 			<version>0.09</version>
