--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,5 +1,4 @@
-# Common Application configuration
-
-# Application configuration
+# Properties to be used across all the environments. They can be overwritten.
 http.port=9090
 startingDate=#[groovy: new Date(System.currentTimeMillis() - 10000).format("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", TimeZone.getTimeZone('UTC'))]
+page.size=1000
