--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,7 +1,4 @@
-# Properties to be used on the qa environment
-
-# Application Configuration
-page.size=1000
+# Properties to be used on the QA environment
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
