Updated gitignore with files [pom.xml.releaseBackup, release.properties]

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ src/test/resources/mule.test.properties
 # Added ignore because of https://www.mulesoft.org/jira/browse/STUDIO-4317 #
 # ------------------------------------------------------------------------ #
 ./src/main/app/test-flows.xml
+
+pom.xml.releaseBackup
+
+release.properties
