--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>template-sfdc2sfdc-user-migration</artifactId>
 	<packaging>mule</packaging>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>template-sfdc2sfdc-user-migration Anypoint Template Project</name>
 
 	<scm>
