--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the development environment
+# Properties to be used on the production environment
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
@@ -6,11 +6,17 @@ sfdc.a.password=
 sfdc.a.securityToken=
 sfdc.a.url=
 
+# Profile ID from SalesForce instance A(source)
+sfdc.a.profile.id=
+
 # SalesForce Connector configuration for company B
 sfdc.b.username=
 sfdc.b.password=
 sfdc.b.securityToken=
 sfdc.b.url=
+
+# Profile ID from SalesForce instance B(target)
+sfdc.b.profile.id=
 
 # SMPT Services configuration
 smtp.host=
