--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -5,9 +5,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
 
-################################################
 # You can set custom log levels per-package here
-################################################
 
 # CXF is used heavily by Mule for web services
 log4j.logger.org.apache.cxf=WARN
@@ -16,7 +14,16 @@ log4j.logger.org.apache.cxf=WARN
 log4j.logger.org.apache=WARN
 
 # Reduce startup noise
-log4j.logger.org.springframework.beans.factory=ERROR
+log4j.logger.org.springframework.beans.factory=WARN
 
 # Mule classes
-log4j.logger.org.mule=ERROR
+log4j.logger.org.mule=INFO
+log4j.logger.com.mulesoft=INFO
+
+# Reduce DM verbosity
+log4j.logger.org.jetel=WARN
+log4j.logger.Tracking=WARN
+
+# Template integration test classes
+log4j.logger.org.mule.templates.flows=INFO
+log4j.logger.org.mule.templates.integration=INFO
