Fixed properties, documentation, dependencies, removed input definition for dw.

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the production environment
+# Properties to be used on the development environment
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
@@ -18,7 +18,7 @@ sfdc.b.url=
 # Profile ID from SalesForce instance B(target)
 sfdc.b.profile.id=
 
-# SMPT Services configuration
+# SMTP Services configuration
 smtp.host=
 smtp.port=
 smtp.user=
