--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -18,7 +18,7 @@ sfdc.b.url=
 # Profile ID from SalesForce instance B(target)
 sfdc.b.profile.id=
 
-# SMPT Services configuration
+# SMTP Services configuration
 smtp.host=
 smtp.port=
 smtp.user=
