Refactoring of existing Mule 4 ETL to separated flows

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,5 +1,6 @@
 # Properties to be used on the development environment
 
+# Starting Date e.g. 2017-12-13T03:00:59Z
 startingDate=
 
 # SalesForce Connector configuration for company A
@@ -7,6 +8,7 @@ sfdc.a.username=
 sfdc.a.password=
 sfdc.a.securityToken=
 sfdc.a.url=
+
 # Profile ID from SalesForce instance A(source)
 sfdc.a.profile.id=
 
@@ -15,6 +17,7 @@ sfdc.b.username=
 sfdc.b.password=
 sfdc.b.securityToken=
 sfdc.b.url=
+
 # Profile ID from SalesForce instance B(target)
 sfdc.b.profile.id=
 
