--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,2 +1,5 @@
 # Properties to be used across all the environments. They can be overwritten.
+
+# Application Configuration
 http.port=
+page.size=
