--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
         <artifactId>templates-tooling-parent-pom</artifactId>
         <version>2.1.12</version>
     </parent>
+    <properties>
+    	<socket-connector-version>1.1.2</socket-connector-version>
+    </properties>
 
     <artifactId>template-sfdc2sfdc-user-migration</artifactId>
     <version>2.1.3-SNAPSHOT</version>
@@ -51,7 +54,7 @@
     	<dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-sockets-connector</artifactId>
-            <version>1.1.2</version>
+            <version>${socket-connector-version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     </dependencies>
